--- a/skola-programiranja-web/src/main/webapp/index.html
+++ b/skola-programiranja-web/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id = "glavni_div_index">
-			<h1>WELCOME TO SKOLA PROGRAMIRANJA</h1>
+			<h1>WELCOME TO PROGRAMERSKA FIRMA</h1>
 			
 			<img src = "slike/programming-school.jpg" alt = "ovde je glavna slika"/>
 			
@@ -21,7 +21,7 @@
 			<a href = "stranice/registracija.html">REGISTRACIJA</a>
 			
 			<div class="index-uvod">
-				<p>Dobrodosli na nasu aplikaciju koja se zove skola programiranja.<br>
+				<p>Dobrodosli na nasu aplikaciju koja se zove programerska firma.<br>
 				Ovde cemo praviti nasu web aplikaciju u programskom jeziku JAVA.<br>
 				Mi volimo Javu.</p>
 				
