--- a/skola-programiranja-web/src/main/webapp/stranice/registracija.html
+++ b/skola-programiranja-web/src/main/webapp/stranice/registracija.html
@@ -17,7 +17,7 @@
 					
 				<a href = "../index.html"><img class="slika-registracija" src = "../slike/home.png"></a>
 	
-				<form class="registracija-forma" action="../RegistracijaController" method="post">
+				<form class="registracija-forma" action="../RegistracijaController" method="get">
 						
 					<label>	User name:</label>
 					<input class = "registracija-input-user" type = "text" name = "username"/> <br>
