--- a/skola-programiranja-web/src/main/webapp/index.html
+++ b/skola-programiranja-web/src/main/webapp/index.html
@@ -19,6 +19,7 @@
 			<br>
 			<a href = "stranice/galerija.html">GALERIJA SLIKA</a>
 			<a href = "stranice/registracija.html">REGISTRACIJA</a>
+			<a href = "stranice/login.html">LOG IN</a>
 			
 			<div class="index-uvod">
 				<p>Dobrodosli na nasu aplikaciju koja se zove programerska firma.<br>
